modif accueil,fonctionnalites,pricing et shopcart 22 avril

--- a/src/FacebookAutomation/Views/Home/Index.cshtml
+++ b/src/FacebookAutomation/Views/Home/Index.cshtml
@@ -141,9 +141,9 @@
 
         <div class="ls-layer" style="transition3d: 3,9,18;">
 
-            <img class="ls-bg" src="~/biss/img/layerslider/1/bg.jpg" alt="layer1-background">
+            <img class="ls-bg" src="~/biss/img/layerslider/1/showcase.png" alt="layer1-background">
 
-            <div class="ls-s2 slide-description" style="top: 50px; left: 75px; slidedirection: fade; scalein: 2; transition2d: all; slidedelay: 6000; delayin: 1000; delayout: 1000; durationin: 1000; easingin: easeOutExpo;">
+            @*<div class="ls-s2 slide-description" style="top: 50px; left: 75px; slidedirection: fade; scalein: 2; transition2d: all; slidedelay: 6000; delayin: 1000; delayout: 1000; durationin: 1000; easingin: easeOutExpo;">
 
                 <p class="subtitle">Fusce non massa vel ex sagittis commodo</p>
 
@@ -155,13 +155,13 @@
 
                 <p><a href="#" class="biss-btn biss-btn-border-primary">discover more</a>
 
-            </div>
+            </div>*@
 
-            <img class="ls-s1" src="~/biss/img/layerslider/1/img-1.png" alt="" style="top: 0px; left: 600px; transition2d: all; slidedelay: 6000; durationin: 1000; easingin: easeOutExpo;">
+            @*<img class="ls-s1" src="~/biss/img/layerslider/1/img-1.png" alt="" style="top: 0px; left: 600px; transition2d: all; slidedelay: 6000; durationin: 1000; easingin: easeOutExpo;">*@
 
         </div>
 
-        <div class="ls-layer" style="transition3d: 1,5,15;">
+        @*<div class="ls-layer" style="transition3d: 1,5,15;">
 
             <img class="ls-bg" src="~/biss/img/layerslider/1/bg.jpg" alt="layer1-background">
 
@@ -181,7 +181,7 @@
 
             <img class="ls-s1" src="~/biss/img/layerslider/1/img-2.png" alt="" style="top: 0px; left: 30px; transition2d: all; slidedelay: 6000; durationin: 1000; easingin: easeOutExpo;">
 
-        </div>
+        </div>*@
 
     </div>
 
@@ -202,9 +202,10 @@
 
                     <div class="width-66 float-left">
 
-                        <p class="h">choose <span class="primary-color">biss</span> multipurpose html template</p>
+                        <p class="h">Choisissez <span class="primary-color">FACEBOOK</span><i style="color:#475061">PUB</i> </p>
+                        
 
-                        <p>Donec faucibus et risus non vehicula. Integer ante lectus, faucibus et arcu eget, tempus dictum lacus.</p>
+                        <p style="font-size:medium;">Automatisez la gestion de vos publicités, Programmez la diffusion de vos campagnes publicitaires dans les groupes ou sur votre page facebook et bien d'autres fonctionnalités encore...<p>
 
                     </div>
 
@@ -229,7 +230,7 @@
 <!-- Action end //-->
 <!-- Services #1 start //-->
 
-<section class="transparent-bg-secondary bg-img bg-img-1 padding-bottom-30">
+@*<section class="transparent-bg-secondary bg-img bg-img-1 padding-bottom-30">
 
     <div class="container">
 
@@ -333,7 +334,7 @@
 
     </div>
 
-</section>
+</section>*@
 
 <!-- Services #1 end //-->
 <!-- Fields of expertise start //-->
@@ -346,11 +347,11 @@
 
             <div class="col-lg-7">
 
-                <p class="section-subtitle">our fields of</p>
+                @*<p class="section-subtitle">our fields of</p>*@
 
-                <h2 class="section-title">expertise</h2>
+                <h2 class="section-title">DESCRIPTION</h2>
 
-                <ul class="style-1">
+                @*<ul class="style-1">
 
                     <li><i class="fa fa-arrow-circle-right primary-color"></i> Suspendisse ultrices hendrerit elit et sodales.</li>
 
@@ -364,8 +365,37 @@
 
                     <li><i class="fa fa-arrow-circle-right primary-color"></i>  Proin non mi in ex semper venenatis ac eget tortor. Aenean accumsan nisl felis, vitae vehicula turpis tempus vel.</li>
 
-                </ul>
+                </ul>*@
 
+
+                <p style="font-size:medium;">
+                    <b class="section-subtitle">FACEBOOK<i style="color:#475061;">PUB</i></b> est un outil facile d'utilisation,
+                    conçu pour aider les utilisateurs à :
+                </p>
+                <ul class="style-1" style="font-size:medium;">
+                <li><i class="fa fa-arrow-circle-right primary-color"></i> poster des messages de masse privés sur facebook</li>
+                    <li>
+                        <i class="fa fa-arrow-circle-right primary-color"></i> publier dans les groupes</li>
+                    <li>
+                        <i class="fa fa-arrow-circle-right primary-color"></i> publier sur les murs de vos amis et fans
+                    </li>
+                    <li>
+                        <i class="fa fa-arrow-circle-right primary-color"></i> publier sur les pages publiques
+                    </li>
+                    <li>
+                        <i class="fa fa-arrow-circle-right primary-color"></i> rechercher et commenter des publications
+                    </li>
+                    <li>
+                        <i class="fa fa-arrow-circle-right primary-color"></i> programmer automatiquement des publications
+                    </li>
+
+     
+
+</ul>
+                <p style="font-size:medium;">
+                    Son principal atout est qu'il vous permet de faire la publicité et de générer du trafic vers votre site web.<br />
+                    Vous pouvez obtenir des centaines de milliers de visiteurs par jour Facebook SANS CLICK.
+                </p>
             </div>
 
             <div class="col-lg-5">
@@ -383,9 +413,9 @@
 <!-- Fields of expertise end //-->
 <!-- Stats start //-->
 
-<section class="align-center transparent-bg-secondary bg-img bg-img-2 padding-bottom-30">
+@*<section class="align-center transparent-bg-secondary bg-img bg-img-2 padding-bottom-30">*@
 
-    <div class="container">
+    @*<div class="container">
 
         <div class="row">
 
@@ -460,352 +490,13 @@
 
         </div>
 
-    </div>
+    </div>*@
 
-</section>
+@*</section>*@
 
 <!-- Stats end //-->
 
-<section>
 
-    <div class="container">
-
-        <div class="row">
-
-            <!-- Partners start //-->
-
-            <div class="col-lg-6 col-md-6">
-
-                <p class="section-subtitle">our respective</p>
-
-                <h2 class="section-title">partners</h2>
-
-                <div class="logo-group sm-margin-bottom-70 md-margin-bottom-70" id="logo-group">
-
-                    <div class="logo-group-item"><span class="helper"></span><img src="~/biss/img/partners/1.png" alt=""></div>
-
-                    <div class="logo-group-item"><span class="helper"></span><img src="~/biss/img/partners/2.png" alt=""></div>
-
-                    <div class="logo-group-item"><span class="helper"></span><img src="~/biss/img/partners/3.png" alt=""></div>
-
-                    <div class="logo-group-item"><span class="helper"></span><img src="~/biss/img/partners/4.png" alt=""></div>
-
-                    <div class="logo-group-item"><span class="helper"></span><img src="~/biss/img/partners/5.png" alt=""></div>
-
-                    <div class="logo-group-item"><span class="helper"></span><img src="~/biss/img/partners/6.png" alt=""></div>
-
-                </div>
-
-            </div>
-
-            <!-- Partners end //-->
-            <!-- "Client say" start //-->
-
-            <div class="col-lg-6 col-md-6">
-
-                <p class="section-subtitle">find out what</p>
-
-                <h2 class="section-title">clients say</h2>
-
-                <div class="plugin-wrapper" id="testimonials">
-
-                    <!-- Testimonials item start //-->
-
-                    <article class="testimonials-1-item">
-
-                        <!-- Testimonial content start //-->
-
-                        <div class="content">
-
-                            <i class="fa fa-quote-left q"></i>
-
-                            Duis pretium vehicula interdum. Etiam leo urna, viverra et laoreet convallis, imperdiet vel nunc. Vestibulum eget finibus turpis, a molestie enim. Mauris euismod dignissim pharetra. Nulla egestas a erat eget porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-
-                        </div>
-
-                        <!-- Testimonial content end //-->
-                        <!-- Testimonial author start //-->
-
-                        <div class="author">
-
-                            <figure>
-
-                                <img src="~/biss/img/faces/2.jpg" alt="">
-
-                            </figure>
-
-                            <p class="name">Patrick L. Zeitler</p>
-
-                            <p class="position">Clinical chemistry technologist, Official All Star Café</p>
-
-                        </div>
-
-                        <!-- Testimonial author end //-->
-
-                    </article>
-
-                    <!-- Testimonials item end //-->
-                    <!-- Testimonials item start //-->
-
-                    <article class="testimonials-1-item">
-
-                        <!-- Testimonial content start //-->
-
-                        <div class="content">
-
-                            <i class="fa fa-quote-left q"></i>
-
-                            Sed hendrerit ex quis nulla eleifend egestas. Pellentesque a dolor sit amet lectus scelerisque volutpat et eu mauris. Etiam bibendum egestas diam a lobortis. Aliquam rhoncus nisi blandit magna pharetra sollicitudin.
-
-                        </div>
-
-                        <!-- Testimonial content end //-->
-                        <!-- Testimonial author start //-->
-
-                        <div class="author">
-
-                            <figure>
-
-                                <img src="~/biss/img/faces/3.jpg" alt="">
-
-                            </figure>
-
-                            <p class="name">Debra R. Brown</p>
-
-                            <p class="position">Playwright, Galaxy Man</p>
-
-                        </div>
-
-                        <!-- Testimonial author end //-->
-
-                    </article>
-
-                    <!-- Testimonials item end //-->
-                    <!-- Testimonials item start //-->
-
-                    <article class="testimonials-1-item">
-
-                        <!-- Testimonial content start //-->
-
-                        <div class="content">
-
-                            <i class="fa fa-quote-left q"></i>
-
-                            Nunc et nibh sit amet velit aliquet fermentum id in nisi. Curabitur eleifend, ligula vel auctor sollicitudin, metus tortor scelerisque odio, eget fringilla urna turpis in lacus.
-
-                        </div>
-
-                        <!-- Testimonial content end //-->
-                        <!-- Testimonial author start //-->
-
-                        <div class="author">
-
-                            <figure>
-
-                                <img src="~/biss/img/faces/1.jpg" alt="">
-
-                            </figure>
-
-                            <p class="name">Carol E. Chavez</p>
-
-                            <p class="position">Stock trader, Bombay Company</p>
-
-                        </div>
-
-                        <!-- Testimonial author end //-->
-
-                    </article>
-
-                    <!-- Testimonials item end //-->
-                    <!-- Testimonials item start //-->
-
-                    <article class="testimonials-1-item">
-
-                        <!-- Testimonial content start //-->
-
-                        <div class="content">
-
-                            <i class="fa fa-quote-left q"></i>
-
-                            Sed hendrerit ex quis nulla eleifend egestas. Pellentesque a dolor sit amet lectus scelerisque volutpat et eu mauris. Etiam bibendum egestas diam a lobortis. Aliquam rhoncus nisi blandit magna pharetra sollicitudin.
-
-                        </div>
-
-                        <!-- Testimonial content end //-->
-                        <!-- Testimonial author start //-->
-
-                        <div class="author">
-
-                            <figure>
-
-                                <img src="~/biss/img/faces/4.jpg" alt="">
-
-                            </figure>
-
-                            <p class="name">Juan A. Benevides</p>
-
-                            <p class="position">Assistant property manager, Gottschalks</p>
-
-                        </div>
-
-                        <!-- Testimonial author end //-->
-
-                    </article>
-
-                    <!-- Testimonials item end //-->
-                    <!-- Testimonials item start //-->
-
-                    <article class="testimonials-1-item">
-
-                        <!-- Testimonial content start //-->
-
-                        <div class="content">
-
-                            <i class="fa fa-quote-left q"></i>
-
-                            Sed hendrerit ex quis nulla eleifend egestas. Pellentesque a dolor sit amet lectus scelerisque volutpat et eu mauris. Etiam bibendum egestas diam a lobortis. Aliquam rhoncus nisi blandit magna pharetra sollicitudin.
-
-                        </div>
-
-                        <!-- Testimonial content end //-->
-                        <!-- Testimonial author start //-->
-
-                        <div class="author">
-
-                            <figure>
-
-                                <img src="~/biss/img/faces/5.jpg" alt="">
-
-                            </figure>
-
-                            <p class="name">Matthew D. Novak</p>
-
-                            <p class="position">Emergency medical technician, John M. Smyth's Homemakers</p>
-
-                        </div>
-
-                        <!-- Testimonial author end //-->
-
-                    </article>
-
-                    <!-- Testimonials item end //-->
-                    <!-- Testimonials item start //-->
-
-                    <article class="testimonials-1-item">
-
-                        <!-- Testimonial content start //-->
-
-                        <div class="content">
-
-                            <i class="fa fa-quote-left q"></i>
-
-                            Sed hendrerit ex quis nulla eleifend egestas. Pellentesque a dolor sit amet lectus scelerisque volutpat et eu mauris. Etiam bibendum egestas diam a lobortis. Aliquam rhoncus nisi blandit magna pharetra sollicitudin.
-
-                        </div>
-
-                        <!-- Testimonial content end //-->
-                        <!-- Testimonial author start //-->
-
-                        <div class="author">
-
-                            <figure>
-
-                                <img src="~/biss/img/faces/6.jpg" alt="">
-
-                            </figure>
-
-                            <p class="name">Nanette C. Harvey</p>
-
-                            <p class="position">Management consultant, ManCharm</p>
-
-                        </div>
-
-                        <!-- Testimonial author end //-->
-
-                    </article>
-
-                    <!-- Testimonials item end //-->
-                    <!-- Nav //-->
-
-                    <div class="riva-insert-menu-here"></div>
-
-                </div>
-
-            </div>
-
-            <!-- "Client say" end //-->
-            <!-- "Company events" start //-->
-
-            @*<div class="col-lg-12">
-
-                <div class="company-events margin-top-70" id="company-events">
-
-                    <span class="label">company events:</span>
-
-                    <!-- Item start //-->
-
-                    <article class="item">
-
-                        <a href="#">Donec posuere ultricies placerat. Nunc ac nunc quis orci commodo ultricies... </a>
-
-                        <span>( Dec 18, 2014 )</span>
-
-                    </article>
-
-                    <!-- Item end //-->
-                    <!-- Item start //-->
-
-                    <article class="item">
-
-                        <a href="#">Integer vel nisi in ligula congue cursus eu sit amet nisl... </a>
-
-                        <span>( Dec 21, 2014 )</span>
-
-                    </article>
-
-                    <!-- Item end //-->
-                    <!-- Item start //-->
-
-                    <article class="item">
-
-                        <a href="#">Nunc pellentesque urna nibh, in lacinia mauris porta vitae... </a>
-
-                        <span>( Dec 28, 2014 )</span>
-
-                    </article>
-
-                    <!-- Item end //-->
-                    <!-- Item start //-->
-
-                    <article class="item">
-
-                        <a href="#">Suspendisse libero sem, mollis sit amet ipsum id, euismod efficitur est... </a>
-
-                        <span>( Jan 05, 2015 )</span>
-
-                    </article>
-
-                    <!-- Item end //-->
-
-                    <div class="nav">
-
-                        <!-- Nav //-->
-
-                        <div class="riva-insert-menu-here"></div>
-
-                    </div>
-
-                </div>
-
-            </div>*@
-
-            <!-- "Company events" end //-->
-
-        </div>
-
-    </div>
-
-</section>
 
 <!-- Action start //-->
 
@@ -819,9 +510,9 @@
 
                 <div class="action-block-2">
 
-                    <p>Do you like how it looks?</p>
+                    @*<p>Do you like how it looks?</p>*@
 
-                    <p class="main">purchase <span class="primary-color">biss html</span> on themeforest</p>
+                    <p class="main">Demarrez votre <i>campagne publicitaire</i> avec <span class="primary-color">facebook</span><i>pub</i></p>
 
                     <p><a asp-controller="Home" asp-action="Pricing" class="biss-btn biss-btn-border-primary">Acheter Maintenant!</a></p>
                 </div>
