--- a/src/FacebookAutomation/Views/Shared/_Layout.cshtml
+++ b/src/FacebookAutomation/Views/Shared/_Layout.cshtml
@@ -5,7 +5,6 @@
 <!--[if gt IE 8]><!-->
 <html class="no-js">
 <!--<![endif]-->
-<!-- Mirrored from rivathemes.net/html/biss/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 28 Mar 2015 08:55:51 GMT -->
 <head>
     <title>@ViewData["Title"] - FacebookAutomation</title>
     <meta charset="utf-8">
@@ -24,7 +23,7 @@
 
 <body>
 
-    <div id="spinner-wrapper">
+    @*<div id="spinner-wrapper">
 
         <div class="spinner">
 
@@ -34,7 +33,7 @@
 
         </div>
 
-    </div>
+    </div>*@
 
     <!-- Wrapping all content //-->
 
@@ -62,11 +61,11 @@
 
                                     <div class="width-auto float-left">
 
-                                        <p class="name">FAP</p>
+                                        <p class="name" style="font-size:x-large;">FACEBOOK<i style="color:#475061">PUB</i></p>
 
                                         <div class="cl"></div>
 
-                                        <p class="slogan">Corporate HTML Template</p>
+                                        <p class="slogan" style="font-size:medium;">Automatisez vos posts sur facebook</p>
 
                                     </div>
 
@@ -111,13 +110,13 @@
 
                                     <a href="#"><i class="fa fa-twitter"></i></a>
 
-                                    <a href="#"><i class="fa fa-behance"></i></a>
+                                    @*<a href="#"><i class="fa fa-behance"></i></a>
 
                                     <a href="#"><i class="fa fa-linkedin"></i></a>
 
                                     <a href="#"><i class="fa fa-google-plus"></i></a>
 
-                                    <a href="#"><i class="fa fa-rss"></i></a>
+                                    <a href="#"><i class="fa fa-rss"></i></a>*@
 
                                 </div>
 
@@ -265,7 +264,7 @@
 
                     <!-- Widget "Company info" start //-->
 
-                    <div class="col-lg-4">
+                    @*<div class="col-lg-4">
 
                         <aside class="widget">
 
@@ -307,12 +306,12 @@
 
                         </aside>
 
-                    </div>
+                    </div>*@
 
                     <!-- Widget "Company info" end //-->
                     <!-- Widget "Useful links" start //-->
 
-                    <div class="col-lg-4">
+                    @*<div class="col-lg-4">
 
                         <aside class="widget widget-links">
 
@@ -360,12 +359,12 @@
 
                         </aside>
 
-                    </div>
+                    </div>*@
 
                     <!-- Widget "Useful links" end //-->
                     <!-- Widget "Stay connected" start //-->
 
-                    <div class="col-lg-4">
+                    @*<div class="col-lg-4">
 
                         <aside class="widget widget-contacts">
 
@@ -401,7 +400,7 @@
 
                         </aside>
 
-                    </div>
+                    </div>*@
 
                     <!-- Widget "Stay connected" end //-->
                     <!-- Copyrights start //-->
@@ -410,7 +409,7 @@
 
                         <div class="copyrights">
 
-                            <p>© 2014 Envato Pty Ltd. Trademarks and brands are the property of their respective owners.</p>
+                            <p>© 2016 by ITINNOVATION.Tous droits réservés.</p>
 
                         </div>
 
