--- a/src/FacebookAutomation/Views/Home/Shopcart.cshtml
+++ b/src/FacebookAutomation/Views/Home/Shopcart.cshtml
@@ -87,9 +87,9 @@
 
             <div class="col-lg-12">
 
-                <h1>Shop Cart</h1>
+                <h1>Paiement</h1>
 
-                <p>Donec orci eros, tristique sit amet odio vitae, auctor pharetra nisi. Mauris ornare euismod lorem et fringilla. In nec bibendum enim, id lobortis enim. Sed ac faucibus lectus, vitae imperdiet elit.</p>
+                @*<p>Donec orci eros, tristique sit amet odio vitae, auctor pharetra nisi. Mauris ornare euismod lorem et fringilla. In nec bibendum enim, id lobortis enim. Sed ac faucibus lectus, vitae imperdiet elit.</p>*@
 
             </div>
 
@@ -192,7 +192,7 @@
 
                         <div class="cart-in-cart">
 
-                            <span>1 items</span> are in your shopping cart now.
+                            <span>1 Produit</span> dans votre panier.
 
                         </div>
 
@@ -206,11 +206,11 @@
 
                                     <th class="w1">#</th>
 
-                                    <th class="w2">Item</th>
+                                    <th class="w2">Designation</th>
 
-                                    <th class="w3">Price</th>
+                                    <th class="w3">Prix</th>
 
-                                    <th class="w3">Qty</th>
+                                    <th class="w3">Qté</th>
 
                                     <th class="w3">Total</th>
 
@@ -264,7 +264,7 @@
 
                         <aside class="widget">
 
-                            <h2 class="widget-title">Commande totals</h2>
+                            <h2 class="widget-title">Total de la commande</h2>
 
                             <div class="widget-content">
 
@@ -300,6 +300,9 @@
         </div>
 
     </section>
+
+
+
 
     <!-- Intro end //-->
 
