--- a/src/FacebookAutomation/Views/Manage/Index.cshtml
+++ b/src/FacebookAutomation/Views/Manage/Index.cshtml
@@ -14,57 +14,97 @@
         <dd>
             @if (Model.HasPassword)
             {
-                <text>[&nbsp;&nbsp;<a asp-controller="Manage" asp-action="ChangePassword">Change</a>&nbsp;&nbsp;]</text>
+            <text>[&nbsp;&nbsp;<a asp-controller="Manage" asp-action="ChangePassword">Change</a>&nbsp;&nbsp;]</text>
             }
             else
             {
-                <text>[&nbsp;&nbsp;<a asp-controller="Manage" asp-action="SetPassword">Create</a>&nbsp;&nbsp;]</text>
+            <text>[&nbsp;&nbsp;<a asp-controller="Manage" asp-action="SetPassword">Create</a>&nbsp;&nbsp;]</text>
             }
         </dd>
-        <dt>External Logins:</dt>
+        <dt>Gestion des licences:</dt>
         <dd>
-            @Model.Logins.Count [&nbsp;&nbsp;<a asp-controller="Manage" asp-action="ManageLogins">Manage</a>&nbsp;&nbsp;]
-        </dd>
-        <dt>Phone Number:</dt>
-        <dd>
-            <p>
-                Phone Numbers can used as a second factor of verification in two-factor authentication.
-                See <a href="http://go.microsoft.com/fwlink/?LinkID=532713">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication using SMS.
-            </p>
-            @*@(Model.PhoneNumber ?? "None")
-                @if (Model.PhoneNumber != null)
-                {
-                    <br />
-                    <text>[&nbsp;&nbsp;<a asp-controller="Manage" asp-action="AddPhoneNumber">Change</a>&nbsp;&nbsp;]</text>
-                    <form asp-controller="Manage" asp-action="RemovePhoneNumber" method="post" role="form">
-                        [<button type="submit" class="btn-link">Remove</button>]
-                    </form>
-                }
-                else
-                {
-                    <text>[&nbsp;&nbsp;<a asp-controller="Manage" asp-action="AddPhoneNumber">Add</a>&nbsp;&nbsp;]</text>
-                }*@
-        </dd>
-
-        <dt>Two-Factor Authentication:</dt>
-        <dd>
-            <p>
-                There are no two-factor authentication providers configured. See <a href="http://go.microsoft.com/fwlink/?LinkID=532713">this article</a>
-                for setting up this application to support two-factor authentication.
-            </p>
-            @*@if (Model.TwoFactor)
-                {
-                    <form asp-controller="Manage" asp-action="DisableTwoFactorAuthentication" method="post" class="form-horizontal" role="form">
-                        Enabled [<button type="submit" class="btn-link">Disable</button>]
-                    </form>
-                }
-                else
-                {
-                    <form asp-controller="Manage" asp-action="EnableTwoFactorAuthentication" method="post" class="form-horizontal" role="form">
-                        [<button type="submit" class="btn-link">Enable</button>] Disabled
-                    </form>
-                }*@
+           @Model.NbreLicence Licences a enregistrer @if(Model.NbreLicence > 0) {<text>[<a asp-controller="Manage" asp-action="ValiderLicence">Enregistrer une licence</a>&nbsp;&nbsp;]</text>}
         </dd>
     </dl>
 </div>
+
+
+@section scriptcss {
+    <!-- CSS includes //-->
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Archivo+Black' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="~/biss/css/normalize.css" type="text/css">
+    <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
+    <link rel="stylesheet" href="~/biss/css/animate.css" type="text/css">
+    <link rel="stylesheet" href="~/biss/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="~/biss/css/font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
+    <link rel="stylesheet" href="~/biss/css/helpers.css" type="text/css">
+    <link rel="stylesheet" href="~/biss/css/component.css" type="text/css">
+
+    <!-- LayerSlider styles -->
+    <link rel="stylesheet" href="~/biss/css/layerslider/css/layerslider.css" type="text/css">
+
+    <link rel="stylesheet" href="~/biss/css/colors/1.css" type="text/css" id="site-color">
+    <link rel="stylesheet" href="~/biss/css/settings.css" type="text/css">
+
+    <!-- JS includes //-->
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries //-->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <script src="~/biss/js/twitterFetcher_min.js"></script>
+}
+
+@section Scripts {
+
+    <!-- JS includes //-->
+    <script src="~/biss/js/vendor/jquery-1.11.1.min.js"></script>
+    <script src="~/biss/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+    <script src="~/biss/js/vendor/bootstrap.min.js"></script>
+    <script src="~/biss/js/imagesloaded.pkgd.min.js"></script>
+    <script src="~/biss/js/masonry.pkgd.min.js"></script>
+    <script src="~/biss/js/less-1.7.4.min.js"></script>
+    <script src="~/biss/js/jquery.colorbox-min.js"></script>
+    <script src="~/biss/js/jquery.easing.1.3.js"></script>
+    <script src="~/biss/js/jquery.rivathemes.js"></script>
+    <script src="~/biss/js/layerslider/jquery-easing-1.3.js" type="text/javascript"></script>
+    <script src="~/biss/js/layerslider/jquery-transit-modified.js" type="text/javascript"></script>
+    <script src="~/biss/js/layerslider/layerslider.transitions.js" type="text/javascript"></script>
+    <script src="~/biss/js/layerslider/layerslider.kreaturamedia.jquery.js" type="text/javascript"></script>
+    <script src="~/biss/js/biss.js"></script>
+
+    <script>
+        (function ($) {
+            "use strict";
+
+            //
+            // Preload images
+            //
+
+            $('document').ready(function () {
+
+                var $container = $('body'),
+                    tweetsTimer;
+
+                $container.imagesLoaded(function () {
+
+                    $('#spinner-wrapper').hide();
+
+                });
+
+                clearTimeout(tweetsTimer);
+
+                $('#sendMessageBtn').click(function (e) {
+                    e.preventDefault();
+                    processSendEmail();
+                });
+
+            });
+
+        })(jQuery);
+    </script>
+
+}
