--- a/src/FacebookAutomation/Views/Manage/ValiderLicence.cshtml
+++ b/src/FacebookAutomation/Views/Manage/ValiderLicence.cshtml
@@ -1,34 +1,27 @@
-﻿@model VerifyCodeViewModel
+﻿@model Licences
 @{
-    ViewData["Title"] = "Verify";
+    ViewData["Title"] = "Set Password";
 }
 
-<h2>@ViewData["Title"].</h2>
+<p class="text-info">
+    You do not have a local username/password for this site. Add a local
+    account so you can log in without an external login.
+</p>
 
-<form asp-controller="Account" asp-action="VerifyCode" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
-    <div asp-validation-summary="ValidationSummary.All" class="text-danger"></div>
-    <input asp-for="Provider" type="hidden" />
-    <input asp-for="RememberMe" type="hidden" />
-    <h4>@ViewData["Status"]</h4>
+<form asp-controller="Manage" asp-action="ValiderLicence" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
+    <h4>Enregistrement de la licence</h4>
     <hr />
+    <div asp-validation-summary="ValidationSummary.All" class="text-danger"></div>
     <div class="form-group">
-        <label asp-for="Code" class="col-md-2 control-label"></label>
+        <label asp-for="NoSerie" class="col-md-2 control-label"></label>
         <div class="col-md-10">
-            <input asp-for="Code" class="form-control" />
-            <span asp-validation-for="Code" class="text-danger"></span>
+            <input asp-for="NoSerie" class="form-control" />
+            <span asp-validation-for="NoSerie" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <div class="checkbox">
-                <input asp-for="RememberBrowser" />
-                <label asp-for="RememberBrowser"></label>
-            </div>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-default">Valider la licence</button>
         </div>
     </div>
 </form>
