--- a/src/FacebookAutomation/Views/Home/Shopcart.cshtml
+++ b/src/FacebookAutomation/Views/Home/Shopcart.cshtml
@@ -227,7 +227,7 @@
                                     
                                     <td class="w2 title"><a href="#"><i class="fa fa-times remove"></i></a> <a href="#">@Model.produit.Description</a></td>
 
-                                    <td class="w3 price"><span id="cart-table-price-1" data-val="@Model.produit.PrixVente">@Model.produit.PrixVente</span></td>
+                                    <td style="font-weight:bold;">@Model.produit.PrixVente</td>
 
                                     <td class="w3 qty">
 
