modif contacts test

--- a/src/FacebookAutomation/Views/Home/Contact.cshtml
+++ b/src/FacebookAutomation/Views/Home/Contact.cshtml
@@ -48,7 +48,7 @@
     <script src="~/biss/js/layerslider/layerslider.transitions.js" type="text/javascript"></script>
     <script src="~/biss/js/layerslider/layerslider.kreaturamedia.jquery.js" type="text/javascript"></script>
     <script src="~/biss/js/biss.js"></script>
-<script type="text/javascript" src="~/newsletter/js/addmessage.js"></script>
+<script type="text/javascript" src="~/newsletter/addmessage.js"></script>
 
 <script>
 (function($) {
